@@ -295,7 +295,11 @@ static void JS_CollectionRevisionTreeVerification(
     try {
       auto* physical = toRocksDBCollection(*collection);
       auto batchId = ctx->id();
-      storedTree = physical->revisionTree(batchId);
+      auto* snapshot = ctx->snapshot();
+      if (snapshot == nullptr) {
+        TRI_V8_THROW_EXCEPTION_INTERNAL("Did not find shapshot in batch!");
+      }
+      storedTree = physical->revisionTree(snapshot->GetSequenceNumber());
       computedTree = physical->computeRevisionTree(batchId);
       ctx->setDeleted();
     } catch (...) {
