@@ -1,6 +1,13 @@
 v3.9.4 (XXXX-XX-XX)
 -------------------
 
+* Implement prefetch for revision trees, in case a batch is created with
+  a distinguished collection as for `SynchronizeShard`. This ensures that
+  the revision tree for the batch will be available when needed, even though
+  the revision tree for the collection might already have advanced beyond
+  the sequence number of the snapshot in the batch. This ensures that
+  shards can get in sync more reliably and more quickly.
+
 * Fixed BTS-926: UI showing the "create index" form to non-admin users.
 
 
